# vela-ml-training

./: .gitignore  00_setup_guide.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/session-01/: 01_intro_solution.ipynb  01_intro_starter.ipynb  debug_csv_loading.py  fixed_csv_loading.py
notebooks/session-01-intro/: 01_intro_solution_fixed.ipynb
notebooks/session-01_intro/: 01_intro_solution.ipynb
notebooks/session-02-supervised-ml-1/: 02_1-supervised_ml_intro.ipynb  02_2-multiple_regression_complete.ipynb  02_3-Regressions_lab_session.ipynb  02_Regressions_lab_session.ipynb  02_supervised_ml_intro.ipynb
notebooks/session-02-supervised-ml-1/exercices/: exercice_regression_california_Yahjeb.ipynb  exercice_regression_california_housing.ipynb
notebooks/session-02_regression/: 02_regression_starter.ipynb
notebooks/session-03-supervised-ml-2/: 03_EXO_titanic_approfondi.ipynb  03_classification_intro.ipynb  03_classification_intro_complete.ipynb  03_classification_intro_pedagogique_complet.ipynb  03_supervised_ml_2_starter.ipynb
scripts/: download_data.py
src/: __init__.py
src/data/: loader.py
